--- a/templates/roadway_near_school.html
+++ b/templates/roadway_near_school.html
@@ -66,7 +66,7 @@
 
                 <label for="Patial_One_way">Partial One Way </label>
                 <input type="radio" id="Partial_One_way_yes" name="Partial_One_way" value="Yes"
-                    onclick="loadBlockpartialOne();">
+                    onclick="loadBlockPartialOne();">
                 <label for="Patial_One_way_yes">Yes</label>
 
                 <input type="radio" id="Partial_One_way_no" name="Partial_One_way" value="No"
